--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 build-SpriteEditor-Qt_6_6_0_for_macOS-Debug
 build-SpriteEditor-Desktop_Qt_6_6_0_MinGW_64_bit-Debug
+build-SpriteEditor-Desktop_Qt_6_6_0_MinGW_64_bit-Release
